--- a/speech.ipynb
+++ b/speech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,27 +19,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Feature Extraction Function\n",
     "def extract_features(file_name):\n",
     "    y, sr = librosa.load(file_name, duration=2.5, offset=0.6)\n",
-    "    # Extract MFCC features\n",
     "    mfccs = np.mean(librosa.feature.mfcc(y=y, sr=sr, n_mfcc=13).T, axis=0)\n",
-    "    # Extract Chroma features\n",
     "    chroma = np.mean(librosa.feature.chroma_stft(y=y, sr=sr).T, axis=0)\n",
-    "    # Extract Mel Spectrogram\n",
     "    mel = np.mean(librosa.feature.melspectrogram(y=y, sr=sr).T, axis=0)\n",
-    "    return np.hstack([mfccs, chroma, mel])"
+    "    contrast = np.mean(librosa.feature.spectral_contrast(y=y, sr=sr).T, axis=0)\n",
+    "    tonnetz = np.mean(librosa.feature.tonnetz(y=librosa.effects.harmonic(y), sr=sr).T, axis=0)\n",
+    "    return np.hstack([mfccs, chroma, mel, contrast, tonnetz])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=862\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=851\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=817\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=805\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=828\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\nikit\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=1024 is too large for input signal of length=840\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Load Data and Extract Features\n",
     "dataset_path = 'input/'\n",
@@ -56,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +95,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
+      "[CV] END ..................C=0.1, gamma=scale, kernel=linear; total time=   2.8s\n",
+      "[CV] END ..................C=0.1, gamma=scale, kernel=linear; total time=   2.8s\n",
+      "[CV] END ..................C=0.1, gamma=scale, kernel=linear; total time=   3.1s\n",
+      "[CV] END ..................C=0.1, gamma=scale, kernel=linear; total time=   3.0s\n",
+      "[CV] END ..................C=0.1, gamma=scale, kernel=linear; total time=   3.1s\n",
+      "[CV] END .....................C=0.1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .....................C=0.1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .....................C=0.1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .....................C=0.1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .....................C=0.1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ...................C=0.1, gamma=auto, kernel=linear; total time=   3.0s\n",
+      "[CV] END ...................C=0.1, gamma=auto, kernel=linear; total time=   3.0s\n",
+      "[CV] END ...................C=0.1, gamma=auto, kernel=linear; total time=   3.0s\n",
+      "[CV] END ...................C=0.1, gamma=auto, kernel=linear; total time=   3.0s\n",
+      "[CV] END ...................C=0.1, gamma=auto, kernel=linear; total time=   3.0s\n",
+      "[CV] END ......................C=0.1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=0.1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=0.1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=0.1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=0.1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ....................C=1, gamma=scale, kernel=linear; total time=  25.1s\n",
+      "[CV] END ....................C=1, gamma=scale, kernel=linear; total time=  23.3s\n",
+      "[CV] END ....................C=1, gamma=scale, kernel=linear; total time=  25.6s\n",
+      "[CV] END ....................C=1, gamma=scale, kernel=linear; total time=  29.3s\n",
+      "[CV] END ....................C=1, gamma=scale, kernel=linear; total time=  27.4s\n",
+      "[CV] END .......................C=1, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .......................C=1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=1, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .......................C=1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=1, gamma=scale, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .....................C=1, gamma=auto, kernel=linear; total time=  27.4s\n",
+      "[CV] END .....................C=1, gamma=auto, kernel=linear; total time=  26.6s\n",
+      "[CV] END .....................C=1, gamma=auto, kernel=linear; total time=  27.5s\n",
+      "[CV] END .....................C=1, gamma=auto, kernel=linear; total time=  28.1s\n",
+      "[CV] END .....................C=1, gamma=auto, kernel=linear; total time=  25.0s\n",
+      "[CV] END ........................C=1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ........................C=1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ........................C=1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ........................C=1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ........................C=1, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ...................C=10, gamma=scale, kernel=linear; total time= 3.0min\n",
+      "[CV] END ...................C=10, gamma=scale, kernel=linear; total time= 2.9min\n",
+      "[CV] END ...................C=10, gamma=scale, kernel=linear; total time= 3.2min\n",
+      "[CV] END ...................C=10, gamma=scale, kernel=linear; total time= 3.4min\n",
+      "[CV] END ...................C=10, gamma=scale, kernel=linear; total time= 3.3min\n",
+      "[CV] END ......................C=10, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ......................C=10, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ......................C=10, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ......................C=10, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ......................C=10, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ....................C=10, gamma=auto, kernel=linear; total time= 2.9min\n",
+      "[CV] END ....................C=10, gamma=auto, kernel=linear; total time= 3.1min\n",
+      "[CV] END ....................C=10, gamma=auto, kernel=linear; total time= 3.0min\n",
+      "[CV] END ....................C=10, gamma=auto, kernel=linear; total time= 3.4min\n",
+      "[CV] END ....................C=10, gamma=auto, kernel=linear; total time= 3.1min\n",
+      "[CV] END .......................C=10, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=10, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=10, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=10, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END .......................C=10, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ..................C=100, gamma=scale, kernel=linear; total time= 7.2min\n",
+      "[CV] END ..................C=100, gamma=scale, kernel=linear; total time= 7.6min\n",
+      "[CV] END ..................C=100, gamma=scale, kernel=linear; total time= 8.0min\n",
+      "[CV] END ..................C=100, gamma=scale, kernel=linear; total time= 8.0min\n",
+      "[CV] END ..................C=100, gamma=scale, kernel=linear; total time= 7.9min\n",
+      "[CV] END .....................C=100, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .....................C=100, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .....................C=100, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .....................C=100, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END .....................C=100, gamma=scale, kernel=rbf; total time=   0.1s\n",
+      "[CV] END ...................C=100, gamma=auto, kernel=linear; total time= 7.0min\n",
+      "[CV] END ...................C=100, gamma=auto, kernel=linear; total time= 7.2min\n",
+      "[CV] END ...................C=100, gamma=auto, kernel=linear; total time= 8.8min\n",
+      "[CV] END ...................C=100, gamma=auto, kernel=linear; total time= 8.9min\n",
+      "[CV] END ...................C=100, gamma=auto, kernel=linear; total time= 7.7min\n",
+      "[CV] END ......................C=100, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=100, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=100, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=100, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "[CV] END ......................C=100, gamma=auto, kernel=rbf; total time=   0.2s\n",
+      "Best Parameters: {'C': 1, 'gamma': 'scale', 'kernel': 'linear'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {\n",
+    "    'C': [0.1, 1, 10, 100],\n",
+    "    'gamma': ['scale', 'auto'],\n",
+    "    'kernel': ['linear', 'rbf']\n",
+    "}\n",
+    "\n",
+    "# Initialize GridSearchCV\n",
+    "grid = GridSearchCV(SVC(probability=True), param_grid, refit=True, verbose=2, cv=5)\n",
+    "\n",
+    "# Fit the model\n",
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "# Best parameters and model\n",
+    "best_params = grid.best_params_\n",
+    "best_model = grid.best_estimator_\n",
+    "\n",
+    "print(f\"Best Parameters: {best_params}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the best model\n",
+    "with open('best_svm_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(best_model, f)\n",
+    "\n",
+    "# Save the best parameters\n",
+    "with open('best_params.pkl', 'wb') as f:\n",
+    "    pickle.dump(best_params, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['best_params.joblib']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "\n",
+    "# Save the best model\n",
+    "dump(best_model, 'best_svm_model.joblib')\n",
+    "\n",
+    "# Save the best parameters\n",
+    "dump(best_params, 'best_params.joblib')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment_data(y, sr):\n",
+    "    # Pitch shifting\n",
+    "    y_pitch = librosa.effects.pitch_shift(y, sr, n_steps=2)\n",
+    "    # Time stretching\n",
+    "    y_stretch = librosa.effects.time_stretch(y, rate=0.8)\n",
+    "    return [y, y_pitch, y_stretch]\n",
+    "\n",
+    "\n",
+    "for file in glob.glob(os.path.join(dataset_path, \"Actor_*/*.wav\")):\n",
+    "    emotion = int(os.path.basename(file).split('-')[2]) - 1\n",
+    "    y, sr = librosa.load(file, duration=2.5, offset=0.6)\n",
+    "    \n",
+    "    for aug_y in augment_data(y, sr):\n",
+    "        features.append(extract_features(aug_y))\n",
+    "        labels.append(emotion)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "\n",
+    "# Random Forest\n",
+    "rf_model = RandomForestClassifier()\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "print(\"Random Forest Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred_rf, target_names=emotions))\n",
+    "\n",
+    "# Gradient Boosting\n",
+    "gb_model = GradientBoostingClassifier()\n",
+    "gb_model.fit(X_train, y_train)\n",
+    "y_pred_gb = gb_model.predict(X_test)\n",
+    "print(\"Gradient Boosting Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred_gb, target_names=emotions))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(best_model, X, y, cv=10)\n",
+    "print(f\"Cross-Validation Accuracy: {np.mean(scores)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +743,7 @@
        "SVC(kernel='linear', probability=True)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -515,25 +765,25 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     neutral       0.32      0.36      0.34        22\n",
+      "     neutral       0.29      0.36      0.32        22\n",
       "        calm       0.56      0.64      0.60        56\n",
-      "       happy       0.31      0.36      0.33        42\n",
-      "         sad       0.45      0.42      0.43        50\n",
-      "       angry       0.60      0.48      0.53        50\n",
-      "     fearful       0.35      0.41      0.38        39\n",
-      "     disgust       0.40      0.39      0.40        46\n",
-      "   surprised       0.48      0.38      0.42        55\n",
+      "       happy       0.32      0.43      0.36        42\n",
+      "         sad       0.38      0.32      0.35        50\n",
+      "       angry       0.59      0.52      0.55        50\n",
+      "     fearful       0.47      0.41      0.44        39\n",
+      "     disgust       0.43      0.41      0.42        46\n",
+      "   surprised       0.60      0.51      0.55        55\n",
       "\n",
-      "    accuracy                           0.44       360\n",
-      "   macro avg       0.43      0.43      0.43       360\n",
-      "weighted avg       0.45      0.44      0.44       360\n",
+      "    accuracy                           0.46       360\n",
+      "   macro avg       0.45      0.45      0.45       360\n",
+      "weighted avg       0.47      0.46      0.47       360\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# 6. Evaluate the Model\n",
-    "y_pred = model.predict(X_test)\n",
+    "y_pred = best_model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred, target_names=['neutral', 'calm', 'happy', 'sad', 'angry', 'fearful', 'disgust', 'surprised']))"
    ]
   }
@@ -554,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
